fixed spacing issue on collapsible headers on card

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -208,3 +208,6 @@ a{
 .btn-border{
 	border: 2px solid black;
 }
+.collapsible-header{
+	line-height: 2rem;
+}
